<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/rounded_space_dashboard_24"
            app:tint="@color/accent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24sp"
            android:text="@string/bem_vindo"
            android:textSize="48sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/imagem_de_duas_pessoas_lendo_um_artigo_no_smartphone"
            android:src="@drawable/undraw_sharing_articles_re_jnkp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="32dp"
            android:alpha=".1"
            android:background="@color/text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24sp"
            android:drawablePadding="8dp"
            android:text="@string/voce_precisa_ler"
            android:textColor="@color/textLight"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/round_info_outline_24"
            app:drawableTint="@color/textLight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="2dp"
                android:text="@string/leia_nossos"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_termos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/termos_de_servico"
                android:textColor="@color/textLight"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/btn_continuar"
        android:alpha=".1"
        android:background="@color/text" />

    <Button
        android:id="@+id/btn_continuar"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16sp"
        android:text="@string/aceitar_e_continuar"
        app:icon="@drawable/round_check_circle_outline_24" />
</RelativeLayout>