<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="12dp"
    android:background="@drawable/rounded_r24_outline"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_feed_group_favicon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/accent"
            app:shapeAppearance="@style/circle" />

        <TextView
            android:id="@+id/tv_feed_group_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/titulo"
            android:textSize="16sp" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_artigo_capa"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:background="@color/border"
        android:scaleType="centerCrop"
        app:shapeAppearance="@style/rounded_16" />

    <TextView
        android:id="@+id/tv_artigo_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="20sp" />

    <include layout="@layout/separador" />

    <TextView
        android:id="@+id/tv_artigo_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:textColor="@color/textLight"
        android:textSize="16sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/btn_continuar_lendo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_artigo_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_r16_outline"
                android:padding="8dp"
                android:text="@string/categoria"
                android:textColor="@color/textLight"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_artigo_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textColor="@color/textLight"
                android:textSize="12sp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_continuar_lendo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:drawablePadding="2dp"
            android:text="@string/continuar_lendo"
            android:textColor="@color/accent"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/round_arrow_outward_24"
            app:drawableTint="@color/accent" />
    </RelativeLayout>
</LinearLayout>