<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.ArtigoActivity">

    <include
        android:id="@+id/barra"
        layout="@layout/barra_artigo" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barra">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_artigo_capa"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearance="@style/rounded_16" />

                <TextView
                    android:id="@+id/tv_artigo_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/titulo"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_artigo_descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/descricao"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_artigo_categoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_r16_outline"
                    android:paddingVertical="8dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/categoria"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_artigo_conteudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/descricao"
                    android:textSize="16sp" />
            </LinearLayout>

            <include layout="@layout/separador_m0" />

            <LinearLayout
                android:id="@+id/li_info_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16sp"
                    android:background="@drawable/rounded_r16_outline"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/nao_possivel_conferir"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    app:drawableTint="?android:colorAccent"
                    app:drawableTopCompat="@drawable/round_security_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_r16_outline"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/links_estao_desativados_nos_artigos_por_questoes_de_seguranca"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    app:drawableTint="?android:colorAccent"
                    app:drawableTopCompat="@drawable/round_info_outline_24" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>