<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_r24_top"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".activities.WelcomeActivity">

    <include
        android:id="@+id/barra"
        layout="@layout/barra_adicionar_artigo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barra"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cole_um_endereco_de_feed_rss"
            android:textColorHint="?android:textColorPrimaryInverse"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/round_rss_feed_24"
            app:startIconTint="?android:colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_feed_group_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri|textEmailAddress|textWebEditText"
                android:textColor="?android:textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/li_info_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:padding="14dp"
                android:text="@string/nao_possivel_conferir"
                android:textAlignment="center"
                android:textColor="?android:textColorPrimaryInverse"
                android:textSize="16sp"
                app:drawableTint="?android:colorAccent"
                app:drawableTopCompat="@drawable/round_security_24" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_adicionar_feed_group"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:text="@string/buscar_feeds"
            app:icon="@drawable/round_search_24" />
    </LinearLayout>
</RelativeLayout>