<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/rounded_r24_outline"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_favicon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="?colorSurfaceVariant"
            app:shapeAppearance="@style/circle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_feed_group_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/id_feed_group_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:textColor="?colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/separador" />

    <TextView
        android:id="@+id/id_feed_group_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/descricao"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/btn_adicionar_feed_group"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_feed_group_item_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:textColor="?colorOnSurfaceVariant"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/id_feed_group_last_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descricao"
                android:textSize="12sp" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_adicionar_feed_group"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/adicionar_feed"
            app:icon="@drawable/round_rss_feed_24" />

        <Button
            android:id="@+id/btn_remover_feed_group"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            app:icon="@drawable/round_remove_circle_outline_24" />

    </RelativeLayout>
</LinearLayout>